# pi-ticketflow

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  VERSIONING.md  install.sh  package.json  proposal-irf-improvements.md  pyproject.toml  research.md  reviewer-subagent-failure-report.md
.tickets/: abc-123.md  pt-0nqq.md  pt-0v53.md  pt-1fsy.md  pt-1pxe.md  pt-1vz2.md  pt-1zkq.md  pt-2rjt.md  pt-2sea.md  pt-2xr4.md  pt-3nit.md  pt-4eor.md  pt-4sw6.md  pt-4y31.md  pt-699h.md  pt-6d99.md  pt-6q53.md  pt-6rja.md  pt-6zp2.md  pt-6ztc.md  pt-70hy.md  pt-74c7.md  pt-74hd.md  pt-7cri.md  pt-7gmp.md  pt-7hzv.md  pt-7i3q.md  pt-7jzy.md  pt-7l5c.md  pt-7lrp.md  pt-7sv0.md  pt-8qk8.md  pt-9dxh.md  pt-9hgu.md  pt-9lri.md  pt-9uxj.md  pt-9yjn.md  pt-9zhm.md  pt-a51k.md  pt-az2p.md  (+114 more)
agents/: closer.md  fixer.md  implementer.md  researcher-fetch.md  researcher.md  review-merge.md  reviewer-general.md  reviewer-second-opinion.md  reviewer-spec-audit.md
config/: install-manifest.txt  settings.json
demo/: __init__.py  __main__.py  hello.py
docs/: AGENTS.md.template  SKILL_REFACTORING_SUMMARY.md  architecture.md  artifact-policy.md  commands.md  configuration.md  deprecation-policy.md  features.md  getting-started.md  migration-to-skills.md  ralph-logging.md  ralph.md  retries-and-escalation.md  skill-refactoring-plan.md  ticket_factory.md  workflows.md
prompts/: irf-backlog-new.md  irf-baseline.md  irf-followups.md  irf-from-openspec-new.md  irf-lite.md  irf-new.md  irf-seed-new.md  irf-spike.md  irf-sync.md  ralph-loop.md  ralph-start-new.md  ralph-start.md  tf-backlog-from-openspec.md  tf-backlog-ls.md  tf-backlog.md  tf-baseline.md  tf-close.md  tf-dedup.md  tf-deps-sync.md  tf-followups-scan.md  tf-followups.md  tf-from-openspec.md  (+12 more)
(+720 files in other folders)
